--- a/satoshi-main/index.html
+++ b/satoshi-main/index.html
@@ -52,7 +52,7 @@
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Dylan<br></span><span
                         class="typed-text"></span><span class="cursor typing">&nbsp;</span></h1>
 
-                <a href="https://drive.google.com/file/d/1AunP_FisndJVxsZR4XrkfEpslQdwK_0A/view?usp=sharing" target="_blank" class="button">Show CV</a>
+                <a href="https://www.twitter.com/DylanMeador" target="_blank" class="button">My Twitter</a>
             </div>
 
             <div class="home__social">
